--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-//I have put tailwind classes here to reduce component pollution
+
 @layer utilities {
   .bg-gradient-custom {
     @apply bg-gradient-to-b from-[#373E44] to-[#191B1F] h-screen w-screen;
@@ -38,8 +38,9 @@
   @apply w-[calc(100%-10rem)] mt-5 flex justify-between items-center
 }
 .plusButton {
-  @apply w-[131.32px] h-[46px] rounded-[104px] font-Jakarta font-extrabold text-white text-[12px];
+  @apply w-[131.32px] h-[46px] flex justify-center items-center rounded-[104px] font-Jakarta font-extrabold text-white text-[12px];
   background-opacity: 3%;
+
   background-color: #373E44;
   box-shadow: inset 0px 0px 48.9064px rgba(255, 255, 255, 0.05),
               inset 0px 3.26043px 3.26043px rgba(255, 255, 255, 0.15),
@@ -70,7 +71,7 @@ opacity: 0px;
 .imageCard{
   @apply w-[190px] h-[179px]
 }
-//Here customised the scrollbar
+
 .articleCard{
   ::-webkit-scrollbar {
     width: 8px;
